# internal/api/routers/host.go
@@ -14,6 +14,7 @@ func (s *HostRouter) InitRouter(Router *gin.RouterGroup) {
 		hostRouter.POST("", baseApi.CreateHost)
 		hostRouter.POST("/search", baseApi.SearchHost)
 		hostRouter.POST("/update", baseApi.UpdateHost)
+		hostRouter.POST("/update/group", baseApi.UpdateHostGroup)
 		hostRouter.POST("/tree", baseApi.HostTree)
 		hostRouter.POST("/test/byid/:id", baseApi.TestByID)
 		hostRouter.POST("/test/byinfo", baseApi.TestByInfo)
